<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.demetrious.watchlist</groupId>
    <artifactId>WatchList</artifactId>
    <version>0.0.1</version>
    <name>WatchList</name>
    <description>Application for anime list manipulation</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.4</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>20</java.version>
        <node.version>v16.13.0</node.version>
        <node.url>https://nodejs.org/dist/</node.url>
        <npm.version>v1.4.9</npm.version>
        <npm.registry.url>https://registry.npmjs.org/</npm.registry.url>
        <start-class>ru.demetrious.watchlist.WatchListApplication</start-class>
    </properties>

    <profiles>
        <profile>
            <id>local</id>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>3.1.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.1.214</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.2.7.Final</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>com.manoelcampos</groupId>
            <artifactId>random-org-client</artifactId>
            <version>1.1.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>generate-resources</phase>
                        <configuration>
                            <target>
                                <exec executable="cmd">
                                    <arg value="/c"/>
                                    <arg line="mklink /D ${project.basedir}\node\electron\node ${project.basedir}\node\node"/>
                                </exec>
                                <exec executable="cmd">
                                    <arg value="/c"/>
                                    <arg line="mklink /D ${project.basedir}\node\frontend\node ${project.basedir}\node\node"/>
                                </exec>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-resources frontend</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target/classes/static</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>node/frontend/build</directory>
                                </resource>
                                <resource>
                                    <directory>resources/icons</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                        <configuration>
                            <classifier>spring-boot</classifier>
                            <mainClass>ru.demetrious.watchlist.WatchListApplication</mainClass>
                            <finalName>${project.name}</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>1.13.4</version>
                <configuration>
                    <nodeVersion>${node.version}</nodeVersion>
                    <downloadRoot>${node.url}</downloadRoot>
                    <workingDirectory>node</workingDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>install-node-and-npm</id>
                        <goals>
                            <goal>install-node-and-npm</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                    <execution>
                        <id>set-npm-registry</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                            <arguments>config set registry=${npm.registry.url}</arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>npm install frontend</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <arguments>install</arguments>
                            <workingDirectory>node/frontend</workingDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>npm build frontend</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>compile</phase>
                        <configuration>
                            <arguments>run build</arguments>
                            <workingDirectory>node/frontend</workingDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>npm install electron</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <arguments>install</arguments>
                            <workingDirectory>node/electron</workingDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>npm package electron</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <arguments>run package</arguments>
                            <workingDirectory>node/electron</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>node/frontend/build</directory>
                        </fileset>
                        <fileset>
                            <directory>node/frontend/node</directory>
                        </fileset>
                        <fileset>
                            <directory>node/electron/dist</directory>
                        </fileset>
                        <fileset>
                            <directory>node/electron/node</directory>
                        </fileset>
                        <fileset>
                            <directory>node/node</directory>
                        </fileset>
                        <fileset>
                            <directory>${project.basedir}</directory>
                            <includes>
                                <include>electron.exe</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
